# another_one

./: .env.example  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: chat.py  session.py  upload.py
app/core/: config.py  database.py  logger.py
app/models/: __init__.py  chunk.py  document.py  message.py  session.py
app/schemas/: chat.py  document.py  session.py
app/services/: chat_service.py  ingestion_service.py  retrieval_service.py
scripts/: smoke_test.py
